--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "insta",
-  "homepage": "https://anas-md-a.github.io/Insta/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -8,15 +7,16 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "predeploy" :"npm run build",
-    "deploy" :"gh-pages -d build"
+    "preview": "vite preview"
   },
   "dependencies": {
+    "@stomp/stompjs": "^7.1.1",
     "@tailwindcss/vite": "^4.1.3",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.5",
+    "buffer": "^6.0.3",
     "gh-pages": "^6.3.0",
+    "process": "^0.11.10",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-data-table-component": "^7.7.0",
@@ -25,9 +25,11 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.0",
     "react-toastify": "^11.0.5",
+    "sockjs-client": "^1.6.1",
     "tailwindcss": "^4.1.3"
   },
   "devDependencies": {
+    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@eslint/js": "^9.21.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
